welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value droit
while(!estSurBiscuit) { avance(7);droit();avance(7) }
                                  ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
while(!estSurBiscuit) { avance(7);droit();avance(7) }
^